[package]
name = "dog_food_for_you"
default-run = "dog_food_for_you"
version = "0.1.0"
authors = ["Mark Lodato <mark@thegnar.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_xoshiro = "0.4.0"
structopt = "0.3.14"

[profile.release]
debug = true
