[package]
name = "dog_food_for_you"
default-run = "dog_food_for_you"
version = "0.1.0"
authors = ["Mark Lodato <mark@thegnar.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
rand = "0.7.3"
rayon = "1.3.0"
structopt = "0.3.14"
